# smoke_quit_async

./: .env  Cargo.toml  app.js  index.html  register_form.js  user.html
migrations/2022-06-23-113802_create_sessions/: down.sql  up.sql
migrations/2022-06-29-143159_create_users/: up.sql
migrations/2022-06-29-153226_create_facts/: down.sql  up.sql
migrations/2022-07-05-044136_create_achievements/: up.sql
src/: db.rs  handler.rs  main copy.rs  main.rs  models copy.rs  models.rs  schema copy.rs  schema.rs  schema_bck.rs  server.rs
src/modules/: cookieparser.rs  method.rs  mod.rs
templates/: user.html
