[package]
name = "smoke_quit_async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0-alpha.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.10"
rand = "0.8.5"
sha2 = "0.10.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
url = "2.2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
lazy_static = "1.4.0"
anyhow = "1.0.58"